--- a/.github/workflows/run-typescript-action.yml
+++ b/.github/workflows/run-typescript-action.yml
@@ -17,10 +17,8 @@ jobs:
       - name: Run the TypeScript Action that will print the variable who-to-greet
         id: myTypeScriptAction
         uses: marcusmai/actions-typescript-action@main
-        #with:
-          #who-to-greet: 'Telia'
-          #my-Secret: ${{ secrets.MY_TEST_SECRET }}
-
+        with:
+          environment: 'Dev'
 
       #- name: Print out the variable time from TypeScript Action Basic
       #  run: echo "The output is = ${{ steps.myTypeScriptAction.outputs.time }}"
